# GemmaSearch

./: README.md  gemma3.py  pyproject.toml
tools/: fetch.py  parse.py  search.py
utils/: playwright_manager.py
